src/components/DesktopHeader.css
.left {
	float:left;
	text-align: left;
}
.right {
	float: right;
	text-align: right;
}

/* Logo Heading */
.logo {
	width: 15rem;
	vertical-align: middle;
	padding-top: 1.25rem;
	margin: 0;
}
.mobile-hidden {
/* Removed to prevent nav not showing on mobile	display: none; */
}

@media (min-width: 40rem) {
	.mobile-hidden {
		display: inline;
	}
	/* Header Nav */
	.header_nav__list {
		padding: 0.7rem;
		display: inline-flex;
		cursor: pointer;
	}
	.header_nav {
		padding: 0;
		margin: 0rem;
		padding-top: 1rem;
	}
	.header_nav__button {
		list-style-type: none;
		text-decoration: none;
		vertical-align: middle;
		color: black;
		font-size: 1rem;
	}
	.header_nav__button:hover {
		text-decoration: underline;
		color: #990f3d;
		font-weight: bolder;
	}

	/* Toggle Navigation screen */
	.mobile-nav__item a {
		text-decoration: none;
		font-weight: bold;
		padding: 0.2rem 0;
	}

	.mobile-nav__item a:hover {
	text-decoration: underline;
	color: #990f3d;
	font-weight: bolder;
	}

	.mobile-nav__item--cta a {
		color: white;
		background: #990f3d;
		padding: 0.5rem 1rem;
		border-radius: 8px;
	}
	.main-nav__item--cta a:hover,
	.main-nav__item--cta a:active,
	.mobile-nav__item--cta a:hover,
	.mobile-nav__item--cta a:active {
		color: #ff1b68;
		background: white;
		border: none;
		text-decoration: none;
	}
	.mobile-nav__item {
		margin: 1rem 0;
	} 
	.mobile-nav__item a {
		font-size: 1.5rem;
	}
}

